[package]
name = "black_scholes_wasm"
version = "0.2.1"
authors = ["ronnie chowdhury <ronnie.c995@gmail.com>", "Corey Vixie <corey@vixie.enterprises"]
edition = "2018"
description = "Scalar and SIMD vectorised versions of black scholes and binomial option pricing"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ronniec95/black_scholes"
documentation = "https://docs.rs/black_scholes_simd"
readme = "README.md"
keywords = ["option","pricing","simd","black","scholes"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "black_scholes_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "^1"
console_error_panic_hook = "^0.1.6"
wasm-bindgen = "0.2"
wide= "0.5"

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
lto = true
opt-level = 3
debug = 0